db-utils: Weitere Formatanpassungen und Code-CleanUp